Fix UI bugs: menu, icon cropping, contact size, and form action

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -39,7 +39,7 @@
     display: flex;
   }
 
-  .nav-links.open {
+  #main-nav .nav-links.open {
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -311,7 +311,7 @@
     height: 28px;
   }
 
-  .nav-links.open {
+  #main-nav .nav-links.open {
     top: 64px;
   }
 
